# url-shortener-go

./: .env copy  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.en.md  README.ko.md  README.md  deploy.sh  go.mod  go.sum  init_database.sh  main.go
.github/workflows/: main.yaml
api/: handler.go  middlewares.go  route.go  schemas.go  schemas_test.go  server.go
config/: cache.go  db.go
model/: url.go
pkg/: jwt.go  jwt_test.go  rand.go  rand_test.go  short_key.go  short_key_test.go
src/: config.rs  main.rs  state.rs
src/handlers/: mod.rs  page_handlers.rs  qr_handlers.rs  redirect_handlers.rs  short_url_handlers.rs  verify_handlers.rs
src/middlewares/: auth_middlewares.rs
src/schemas/: mod.rs  short_url_schemas.rs
src/templates/: index.html  redirect.html
src/templates/verify/: error.html  failed.html  success.html
src/utils/: converter.rs  generator.rs  mod.rs
src/validators/: mod.rs  validate_short_key.rs  validate_url.rs
views/: index.html  redirect.html
