[package]
name = "url-shortener"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { version = "0.6", features = ["runtime-tokio-native-tls", "sqlite"] }
axum = "0.8.1"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
nanoid = "0.4.0"
sha2 = "0.10"
chrono = "0.4"
lettre = "0.11"
reqwest = { version = "0.12.9", features = ["json"] }
regex = "1.10"
dotenv = "0.15.0"
scraper = "0.22.0"
tower-http = { version = "0.6.2", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
once_cell = "1.20.2"
jsonwebtoken = "9.3.0"
image = "0.25.6"
qrcode = { version = "0.14.1", features = ["image"] }
urlencoding = "2.1.3"